homework/style.css
body {
    margin: 0;
    padding: 0;
    background-color: #eee;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    font-family: "Open Sans";
    font-size: 14px;
    line-height: 21px;
    padding-bottom: 32px;;
}

h1 {
    font-size: 24px;
    font-weight: normal;
    margin-right: auto;
    margin-bottom: 0px;
}

#instructions {
    margin-right: auto;
    margin-bottom: 32px;
}

.instructions-toggle{
    font-weight: 600;
    color: black;
    text-decoration: none;
}

.instructions-toggle i{
    margin-right: 8px;
}

.score-instructions{
    font-size: 12px;
}

.oh-blue{
    color: #3cb3e0;
}

.score-instructions h3{
    font-weight: 600;
}

.category{
    font-weight: 600;
}

.score-instructions p{
    font-weight: 600;
}

.scale-instructions{
    width:100%;
    height: 60px;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: flex-end;
}

.scale-instructions label{
    width: 10%;
}

.scale-instructions-label{
    width: 18%;    
}

.scale-instructions-label label{
    width: 100%;
    display: block;
    text-align: center;
}

.score-explanation{
    font-weight: 400;
}

.score-number{
    font-weight: 600;
    font-size: 16px;
}

.main-container {
    width: 70vw;
    max-width: 1000px;
    display: flex;
    flex-direction: column;
    padding-top: 32px;
}

.question-container {
    margin-top: 24px;
    display: flex;
    flex-direction: row;
    height: auto;
    width: 100%;
    border-radius: 15px;
    position: relative;
}

.left-container, .right-container {
    width: 50%;
}

.submit-btn {
    padding: 8px 12px 8px 12px;
    min-width: 100px;
    width: auto;
    height: 44px;
    margin-top: 24px;
    align-self: center;
    font-size: 14px;
    line-height: 16px;
    text-align: center;
    border: none;
    border-radius: 4px;
    font-weight: 600;
    font-family: "Open Sans";
    transition-duration: 0.1s;
    color: white;
    background-color: #3cb3e0;
  }
  
  .submit-btn:hover {
    background-color: #3197bd;
    cursor: pointer;
  }

/* Left Container */
/* ********************************* */

.left-container {
    display: block;
    padding: 16px 16px 8px 16px;
    background-color: #d8d8d8;
    color: grey;
    line-height: 32px;
}

.left-container p {
    width: 75%;
    margin-top: 0;
}

.child-condition {
    font-size: 12px;
}

.left-container label {
    display: block;
    margin-bottom: 8px;
}

.left-container input{
    margin-right: 8px;
}

.left-container input[type="text"]{
    background-color: transparent;
    border: none;
    border-bottom: 1px solid grey;
    width: 60%;
}

.opt-out {
    float: right; 
    margin-top: 0;
    color: black;
    /* box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25); */
}

.label-text {
    width: 100px;
    padding: 4px 8px 4px 8px;
    background-color: white;
    border: 1px solid white;
    border-radius: 3px;
    cursor: pointer;
    user-select: none;
    text-align: center;
}

.swal-footer{
   text-align: center;
}

.swal-button{
    background-color: #3cb3e0;
}

.opt-out input[type=checkbox] {
    display: none;
}

.label-text::before{
    font-family: FontAwesome;
    font-weight: 900;
}

input[type=checkbox] +.label-text::before {
    content: "\f096";
}

input[type=checkbox]:checked + .label-text::before{
    content: "\f14a";
}

input[type=checkbox]:checked + .label-text{
    color: #3cb3e0;
    border: 1px solid #3cb3e0;
}

.answer {
    font-size: 12px;
    color: gray;
}

.answer input{
    cursor: not-allowed;
}

/* Right Container */
/* ********************************* */

.right-container {
    background-color: white;
    display: flex;
    flex-direction: row;
    padding: 8px;
}

.inactive {
    background-color: #d8d8d8;
    color: gray;
    pointer-events: none;
}

.inactive input {
    pointer-events: none;
}

.right-container p {
    font-weight: 600;
}

.clarity-relevance p, .overall-score p{
    margin-top: 0;
}


.clarity-relevance {
    width: 60%;
    text-align: center;
}

.clarity-relevance {
    border-right: 1px solid #DFDFDF;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    padding: 16px;
}

.clarity-score {
    margin-bottom: 24px;
}

.scale {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    align-items: flex-end;
}

.scale label {
    font-size: 12px;
}

.scale .score-label input {
    display: block;
}

.overall-score {
    width: 40%;
    padding: 16px;
    text-align: left;
    position: relative;
}

.overall-score p {
    text-align: center;
}

.overall-score label {
    display: block;
    margin-bottom: 8px;
}

.overall-score input {
    margin-right: 8px;
}


/* Progress Bar */
/* *************************** */

.progress-box{
    height: auto;
    width: 120px;
    padding: 4px 16px 16px 16px;
    background-color: white;
    display: flex;
    flex-direction: column;
    position: fixed;
    left: 0;
    top: 200px;
}

.progress{
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: flex-end;
}

#progress-txt{
    color: black;
    font-weight: 600;
}

.text{
    color: #6a6a6a;
    font-weight: 400;
}

.numbers{
    font-weight: 600;
}

.save-btn{
    height: 44px;
    border-radius: 4px;
    border-color: #3cb3e0;
    color: white;
    font-size: 14px;
    line-height: 16px;
    text-align: center;
    border: none;
    border-radius: 4px;
    font-weight: 600;
    font-family: "Open Sans";
    transition-duration: 0.1s;
    color: white;
    background-color: #3cb3e0;
}

.save-btn:hover{
    cursor: pointer;
    background-color: #3197bd;
}

#lastSaved {
    margin-top: 16px;
    font-size: 11px;
    font-weight: normal;
    color: grey;
  }


/* Comment Icon */
/* *************************** */

.comment{
    position: absolute;
    height: 100%;
    width: auto;
    right: -96px;
    display: flex;
    flex-direction: row-reverse;
    align-items: center;
    justify-content: space-between;
}

.comment-btn{
    width: 112px;
    padding: 4px 12px;;
    height: 36px;
    border-radius: 4px;
    font-size: 14px;
    font-weight: 600;
    color: black;
    background-color: white;
    border: 1px solid  #efefef;
    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
    text-align: center;
    display: flex;
    align-items: center;
    justify-content: center;
    font-family: "Open Sans";
}

.comment-btn.active{
    color: #3cb3e0;
}

.comment-btn i{
    margin-right: 8px;
}

.comment-btn:hover{
    color: #3cb3e0;
    cursor: pointer;
}

.comment-box{
    background-color: white;
    display: flex;
    flex-direction: column;
    min-width: 300px;
    width: auto;
    padding: 16px;
    box-shadow: 0px 15px 90px rgba(115, 115, 115, 0.3);
    margin-right: 16px;
}

.comment-box i{
    position: absolute;
    float: right;
    top: 16px;
    right: 16px;
}

.comment-box p{
    margin-top: 0;
    font-weight: 600;
    font-size: 12px;
}

.comment-box input{
    height: 32px;
    border-radius: 4px;
    font-size: 12px;
    border: 1px solid #c9c9c9;
    box-sizing: border-box;
    padding-left: 8px;
}

.comment-buttons{
    align-self: flex-end;
}

.comment-buttons button{
    font-weight: 500;
    margin-top: 16px;
    font-size: 12px;
    width: auto;
    padding: 4px 8px;
    border-radius: 4px;
    cursor: pointer;
}

.main-btn{
    background-color: #3cb3e0;
    color: white;
    border: none;
}

.main-btn:hover{
    background-color: #3197bd;
}

.secondary-btn:hover{
    background-color: white;
    color: black;
} 

.hidden{
    display: none;
}

